--- a/n/index.html
+++ b/n/index.html
@@ -10,14 +10,14 @@
             color: white;
             font-family: Arial, sans-serif;
             display: flex;
-            justify-content: flex-start; /* Вирівнювання елементів по верху */
+            justify-content: flex-start;
             align-items: center;
             height: 100vh;
             margin: 0;
             flex-direction: column;
             text-align: center;
-            padding-top: 50px; /* Додаємо відступ з верхньої частини */
-            overflow: hidden; /* Запобігаємо прокручуванню */
+            padding-top: 50px;
+            overflow: hidden;
         }
         .error {
             font-size: 100px;
@@ -48,7 +48,7 @@
             cursor: pointer;
             border-radius: 20px;
             margin-top: 10px;
-            display: none; /* Спочатку кнопка не видима */
+            display: none;
         }
         .audio {
             display: none;
@@ -60,7 +60,7 @@
         }
         .links-container {
             margin-top: 20px;
-            display: none; /* Спочатку лінки не видимі */
+            display: none;
         }
         .links-container a {
             color: white;
@@ -76,20 +76,42 @@
 </head>
 <body>
 
-    <!-- Символ помилки з текстом -->
     <div class="error" id="error-message">⚠</div>
     <div id="error-text">Сталася невідома помилка</div>
 
-    <!-- Контейнер для зображення -->
+    <div id="banner1">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '36ee0afa249e920c2921e34cf1a91275',
+                'format' : 'iframe',
+                'height' : 90,
+                'width' : 728,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/36ee0afa249e920c2921e34cf1a91275/invoke.js"></script>
+    </div>
+
     <div class="image-container">
         <img src="image.jpg" alt="Image">
         <button class="mute-button" onclick="muteAudio()">🔇 Mute</button>
     </div>
 
-    <!-- Звук -->
+    <div id="banner2" style="margin-top: 20px;">
+        <script type="text/javascript">
+            atOptions = {
+                'key' : 'f20d4d6da68d8c3d96ab5bcf9a349e93',
+                'format' : 'iframe',
+                'height' : 60,
+                'width' : 468,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/f20d4d6da68d8c3d96ab5bcf9a349e93/invoke.js"></script>
+    </div>
+
     <audio class="audio" id="audio" src="sound.mp3" loop autoplay></audio>
 
-    <!-- Контейнер для лінків -->
     <div class="links-container">
         <a href="https://t.me/mem_soundtag" target="_blank">Telegram</a>
         <a href="https://tiktok.com/@mem.tag" target="_blank">TikTok</a>
@@ -101,13 +123,10 @@
         let imageContainer = document.querySelector('.image-container');
         let muteButton = document.querySelector('.mute-button');
         let audio = document.getElementById('audio');
-        let isMuted = false;
         let linksContainer = document.querySelector('.links-container');
 
-        // Визначення мови користувача
         const userLang = navigator.language || navigator.userLanguage;
 
-        // Мови
         const messages = {
             'uk': 'Сталася невідома помилка',
             'en': 'An unknown error occurred',
@@ -117,66 +136,27 @@
             'es': 'Ocurrió un error desconocido'
         };
 
-        // Встановлюємо текст помилки в залежності від мови
         errorText.innerText = messages[userLang.substring(0, 2)] || messages['en'];
 
-        // При кліці на екран чи символ помилки
         document.body.addEventListener('click', function() {
-            errorElement.style.display = 'none'; // Сховати символ помилки
-            errorText.style.display = 'none'; // Сховати текст помилки
-            imageContainer.style.display = 'block'; // Показати зображення
-
-            // Вмикаємо звук
+            errorElement.style.display = 'none';
+            errorText.style.display = 'none';
+            imageContainer.style.display = 'block';
             if (audio.paused) {
                 audio.play();
             }
-
-            // Показати кнопку Mute після натискання
             muteButton.style.display = 'block';
-
-            // Показати лінки на канали після натискання
             linksContainer.style.display = 'block';
         });
 
-        // Функція для кнопки Mute (не робоча, для краси)
         function muteAudio() {
-            // Кнопка не має функціональності
-            // Просто змінюється текст
             muteButton.innerText = muteButton.innerText === "🔇 Mute" ? "🔊 Unmute" : "🔇 Mute";
         }
 
-        // Запобігаємо оновленню сторінки при прокручуванні вниз
-        window.addEventListener('touchmove', function(event) {
-            event.preventDefault();
-        });
-
-        window.addEventListener('wheel', function(event) {
-            event.preventDefault();
-        });
-
-        window.addEventListener('gesturestart', function(event) {
-            event.preventDefault();
-        });
+        window.addEventListener('touchmove', function(event) { event.preventDefault(); });
+        window.addEventListener('wheel', function(event) { event.preventDefault(); });
+        window.addEventListener('gesturestart', function(event) { event.preventDefault(); });
     </script>
-<script type="text/javascript">
-	atOptions = {
-		'key' : '36ee0afa249e920c2921e34cf1a91275',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/36ee0afa249e920c2921e34cf1a91275/invoke.js"></script>
-    <script type="text/javascript">
-	atOptions = {
-		'key' : 'f20d4d6da68d8c3d96ab5bcf9a349e93',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/f20d4d6da68d8c3d96ab5bcf9a349e93/invoke.js"></script>
+
 </body>
 </html>
