--- a/n/index.html
+++ b/n/index.html
@@ -1,76 +1,1 @@
-<!DOCTYPE html><html lang="uk">
-<head>
-<meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Error</title>
-<style>
-body{background:#121212;color:#fff;font-family:Arial,sans-serif;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;height:100vh;margin:0;padding-top:50px;overflow:hidden;text-align:center}
-.error{font-size:100px;width:150px;height:150px;line-height:150px;border-radius:50%;border:3px solid #ffcc00;color:#ffcc00;margin-bottom:20px}
-.image-container{display:none}
-.image-container img{width:150px;height:150px;border-radius:50%}
-.mute-button{background:#333;border:none;color:#fff;padding:10px;cursor:pointer;border-radius:20px;margin-top:10px;display:none}
-.audio{display:none}
-#error-text{font-size:18px;margin-bottom:20px}
-.links-container{margin-top:20px;display:none}
-.links-container a{color:#fff;background:#333;padding:10px;text-decoration:none;border-radius:5px;margin:5px;display:inline-block;font-size:18px}
-.ad{width:1px;height:1px;overflow:hidden}
-.native{width:auto;height:auto;overflow:visible;margin-top:10px}
-</style>
-</head>
-<body>
-<div class="error" id="error-message">⚠</div>
-<div id="error-text">Сталася невідома помилка</div>
-<div class="image-container">
-<img src="image.jpg" alt="Image">
-<button class="mute-button" onclick="muteAudio()">🔇 Mute</button>
-</div>
-<audio class="audio" id="audio" src="sound.mp3" loop autoplay></audio>
-<div class="links-container">
-<a href="https://t.me/mem_soundtag" target="_blank">Telegram</a>
-<a href="https://tiktok.com/@mem.tag" target="_blank">TikTok</a>
-</div><!-- 1x1 banners --><div class="ad">
-<script type="text/javascript">atOptions={key:'cbd20e03adac51ca064222d1efa25fd1',format:'iframe',height:50,width:320,params:{}};</script>
-<script src="//www.highperformanceformat.com/cbd20e03adac51ca064222d1efa25fd1/invoke.js"></script>
-</div><div class="ad">
-<script type="text/javascript">atOptions={key:'045ccb0d2b16bd6e1f77f6d80026b733',format:'iframe',height:60,width:468,params:{}};</script>
-<script src="//www.highperformanceformat.com/045ccb0d2b16bd6e1f77f6d80026b733/invoke.js"></script>
-</div><div class="ad">
-<script type="text/javascript">atOptions={key:'b7d2ea93026c96a6094c131e01ca28fe',format:'iframe',height:300,width:160,params:{}};</script>
-<script src="//www.highperformanceformat.com/b7d2ea93026c96a6094c131e01ca28fe/invoke.js"></script>
-</div><div class="ad">
-<script type="text/javascript">atOptions={key:'045ccb0d2b16bd6e1f77f6d80026b733',format:'iframe',height:60,width:468,params:{}};</script>
-<script src="//www.highperformanceformat.com/045ccb0d2b16bd6e1f77f6d80026b733/invoke.js"></script>
-</div><div class="ad">
-<script type="text/javascript">atOptions={key:'6ccfbff5a4fba6fb58e7a2c98c64eb66',format:'iframe',height:600,width:160,params:{}};</script>
-<script src="//www.highperformanceformat.com/6ccfbff5a4fba6fb58e7a2c98c64eb66/invoke.js"></script>
-</div><div class="ad">
-<script type="text/javascript">atOptions={key:'b458f9a8da26673849313e84f24c2607',format:'iframe',height:250,width:300,params:{}};</script>
-<script src="//www.highperformanceformat.com/b458f9a8da26673849313e84f24c2607/invoke.js"></script>
-</div><!-- Native banner (full size) --><div class="native">
-<script src="//pl28076746.effectivegatecpm.com/b6/70/e9/b670e92fec2b48339827baf182417ede.js"></script>
-</div><script>
-let errorElement=document.getElementById('error-message');
-let errorText=document.getElementById('error-text');
-let imageContainer=document.querySelector('.image-container');
-let muteButton=document.querySelector('.mute-button');
-let audio=document.getElementById('audio');
-let linksContainer=document.querySelector('.links-container');
-const userLang=navigator.language||navigator.userLanguage;
-const messages={uk:'Сталася невідома помилка',en:'An unknown error occurred',ru:'Произошла неизвестная ошибка',de:'Ein unbekannter Fehler ist aufgetreten',fr:'Une erreur inconnue est survenue',es:'Ocurrió un error desconocido'};
-errorText.innerText=messages[userLang.substring(0,2)]||messages['en'];
-
-document.body.addEventListener('click',()=>{
-errorElement.style.display='none';
-errorText.style.display='none';
-imageContainer.style.display='block';
-audio.play();
-muteButton.style.display='block';
-linksContainer.style.display='block';
-});
-
-function muteAudio(){muteButton.innerText=muteButton.innerText==="🔇 Mute"?"🔊 Unmute":"🔇 Mute";}
-
-window.addEventListener('touchmove',e=>e.preventDefault());
-window.addEventListener('wheel',e=>e.preventDefault());
-window.addEventListener('gesturestart',e=>e.preventDefault());
-</script></body>
-</html>
+<!DOCTYPE html><html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>body,html{margin:0;padding:0;overflow:hidden;background:#000;color:#fff;font-family:sans-serif}#e{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);text-align:center}#r{background:#0af;color:#fff;padding:10px 18px;margin-top:14px;border-radius:12px;cursor:pointer;display:inline-block;font-weight:600}</style></head><body><div id="e"><div id="m">Сталася невідома помилка</div><div id="r">Перезавантажити</div></div><script>(function(){ const a=document.createElement('div');a.style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:9999";document.body.appendChild(a); const u=["//pl28076746.effectivegatecpm.com/b6/70/e9/b670e92fec2b48339827baf182417ede.js","//pl28076746.effectivegatecpm.com/45/26/45/452645cb61ba1d563ff7822f11f8ee73.js","//pl28076746.effectivegatecpm.com/b1/3c/2b/b13c2b1c770f3184dd8b8f3ac5d7a9f0.js"];let i=0; function n(){var s=document.createElement('script');s.src=u[i%u.length];s.async=true;a.innerHTML="";a.appendChild(s);i++} document.body.addEventListener('click',n); document.getElementById("r").onclick=()=>location.reload(); })(); </script></body></html>
