--- a/n/index.html
+++ b/n/index.html
@@ -4,50 +4,36 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Error</title>
-<style>
-body{background:#121212;color:#fff;font-family:Arial,sans-serif;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;height:100vh;margin:0;padding-top:50px;overflow:hidden;text-align:center}
-.error{font-size:100px;width:150px;height:150px;line-height:150px;border-radius:50%;background:transparent;color:#ffcc00;margin-bottom:20px;border:3px solid #ffcc00;display:inline-block}
-#reload-btn{margin-bottom:20px;padding:10px 20px;border-radius:20px;border:none;background:#333;color:#fff;cursor:pointer;font-size:16px}
-.image-container{display:none;position:relative}
-.image-container img{border-radius:50%;width:150px;height:150px}
-.mute-button{background:#333;border:none;color:#fff;padding:10px;cursor:pointer;border-radius:20px;margin-top:10px;display:none}
-.audio{display:none}
-#error-text{font-size:18px;color:#fff;margin-bottom:20px}
-.links-container{margin-top:20px;display:none}
-.links-container a{color:#fff;background:#333;padding:10px;text-decoration:none;border-radius:5px;margin:5px;font-size:18px;display:inline-block}
-#ad-container{position:relative;width:1px;height:1px;margin-top:20px;display:flex;flex-direction:column;align-items:center;justify-content:center}
-#ad-container iframe{position:absolute;top:0;left:0;width:1px;height:1px}
-</style>
+<style>body{background:#121212;color:#fff;font-family:Arial,sans-serif;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;height:100vh;margin:0;padding-top:50px;overflow:hidden;text-align:center}.e{font-size:100px;width:150px;height:150px;line-height:150px;border-radius:50%;background:transparent;color:#ffcc00;margin-bottom:20px;border:3px solid #ffcc00;display:inline-block}#r{margin-bottom:20px;padding:10px 20px;border-radius:20px;border:none;background:#333;color:#fff;cursor:pointer;font-size:16px}.i{display:none;position:relative}.i img{border-radius:50%;width:150px;height:150px}.m{background:#333;border:none;color:#fff;padding:10px;cursor:pointer;border-radius:20px;margin-top:10px;display:none}.a{display:none}#t{font-size:18px;color:#fff;margin-bottom:20px}.l{margin-top:20px;display:none}.l a{color:#fff;background:#333;padding:10px;text-decoration:none;border-radius:5px;margin:5px;font-size:18px;display:inline-block}#ad{position:relative;width:1px;height:1px;margin-top:20px;display:flex;flex-direction:column;align-items:center;justify-content:center}#ad iframe{position:absolute;top:0;left:0;width:1px;height:1px}</style>
 </head>
 <body>
-<div class="error" id="error-message">⚠</div>
-<div id="error-text">Сталася невідома помилка</div>
-<button id="reload-btn">Перезавантажити</button>
+<div class="e" id="e">⚠</div>
+<div id="t">Сталася невідома помилка</div>
+<button id="r">Перезавантажити</button>
 
-<div class="image-container">
+<div class="i">
 <img src="image.jpg" alt="Image">
-<button class="mute-button" onclick="muteAudio()">🔇 Mute</button>
+<button class="m" onclick="p()">🔇 Mute</button>
 </div>
 
-<audio class="audio" id="audio" src="sound.mp3" loop autoplay></audio>
+<audio class="a" id="a" src="sound.mp3" loop autoplay></audio>
 
-<div class="links-container">
+<div class="l">
 <a href="https://t.me/mem_soundtag" target="_blank">Telegram</a>
 <a href="https://tiktok.com/@mem.tag" target="_blank">TikTok</a>
 </div>
 
-<div id="ad-container">
-<!-- Банери 1×1 накладені один на один -->
-<script async src="//pl28079343.effectivegatecpm.com/fb2b7e61b1cac213e0cff9f24ecc762c/invoke.js"></script>
-<div id="container-fb2b7e61b1cac213e0cff9f24ecc762c"></div>
-<script>atOptions={key:'cbd20e03adac51ca064222d1efa25fd1',format:'iframe',height:1,width:1,params:{}};</script>
-<script src="//www.highperformanceformat.com/cbd20e03adac51ca064222d1efa25fd1/invoke.js"></script>
-<script>atOptions={key:'045ccb0d2b16bd6e1f77f6d80026b733',format:'iframe',height:1,width:1,params:{}};</script>
-<script src="//www.highperformanceformat.com/045ccb0d2b16bd6e1f77f6d80026b733/invoke.js"></script>
+<div id="ad">
+<script type="text/javascript">atOptions={key:'df68b4ff5279e8f22269d3a17f14d4d8',format:'iframe',height:1,width:1,params:{}};</script><script type="text/javascript" src="//www.highperformanceformat.com/df68b4ff5279e8f22269d3a17f14d4d8/invoke.js"></script>
+<script type="text/javascript">atOptions={key:'f20d4d6da68d8c3d96ab5bcf9a349e93',format:'iframe',height:1,width:1,params:{}};</script><script type="text/javascript" src="//www.highperformanceformat.com/f20d4d6da68d8c3d96ab5bcf9a349e93/invoke.js"></script>
+<script type="text/javascript">atOptions={key:'d4315535299a5c7847ff730ada7ff5bc',format:'iframe',height:1,width:1,params:{}};</script><script type="text/javascript" src="//www.highperformanceformat.com/d4315535299a5c7847ff730ada7ff5bc/invoke.js"></script>
+<script type="text/javascript">atOptions={key:'07f6a7bbc35ec9d4f98394c7e05ef89a',format:'iframe',height:1,width:1,params:{}};</script><script type="text/javascript" src="//www.highperformanceformat.com/07f6a7bbc35ec9d4f98394c7e05ef89a/invoke.js"></script>
+<script type="text/javascript">atOptions={key:'36ee0afa249e920c2921e34cf1a91275',format:'iframe',height:1,width:1,params:{}};</script><script type="text/javascript" src="//www.highperformanceformat.com/36ee0afa249e920c2921e34cf1a91275/invoke.js"></script>
+<script type="text/javascript">atOptions={key:'60f20d48a82429c0bba847a9c350afd2',format:'iframe',height:1,width:1,params:{}};</script><script type="text/javascript" src="//www.highperformanceformat.com/60f20d48a82429c0bba847a9c350afd2/invoke.js"></script>
 </div>
 
 <script>
-let e=document.getElementById('error-message'),t=document.getElementById('error-text'),i=document.querySelector('.image-container'),m=document.querySelector('.mute-button'),a=document.getElementById('audio'),l=document.querySelector('.links-container');const u=navigator.language||navigator.userLanguage;const s={'uk':'Сталася невідома помилка','en':'An unknown error occurred','ru':'Произошла неизвестная ошибка','de':'Ein unbekannter Fehler ist aufgetreten','fr':'Une erreur inconnue est survenue','es':'Ocurrió un error desconocido'};t.innerText=s[u.substring(0,2)]||s['en'];function r(){e.style.display='none';t.style.display='none';i.style.display='block';if(a.paused)a.play();m.style.display='block';l.style.display='block'};document.body.addEventListener('click',r);document.getElementById('reload-btn').addEventListener('click',r);function muteAudio(){m.innerText=m.innerText==="🔇 Mute"?"🔊 Unmute":"🔇 Mute"};['touchmove','wheel','gesturestart'].forEach(evt=>window.addEventListener(evt,e=>e.preventDefault()));
+let e=document.getElementById('e'),t=document.getElementById('t'),i=document.querySelector('.i'),m=document.querySelector('.m'),a=document.getElementById('a'),l=document.querySelector('.l');const u=navigator.language||navigator.userLanguage,s={'uk':'Сталася невідома помилка','en':'An unknown error occurred','ru':'Произошла неизвестная ошибка','de':'Ein unbekannter Fehler ist aufgetreten','fr':'Une erreur inconnue est survenue','es':'Ocurrió un error desconocido'};t.innerText=s[u.substring(0,2)]||s['en'];function r(){e.style.display='none';t.style.display='none';i.style.display='block';if(a.paused)a.play();m.style.display='block';l.style.display='block'};document.body.addEventListener('click',r);document.getElementById('r').addEventListener('click',r);function p(){m.innerText=m.innerText==="🔇 Mute"?"🔊 Unmute":"🔇 Mute"};['touchmove','wheel','gesturestart'].forEach(evt=>window.addEventListener(evt,e=>e.preventDefault()));
 </script>
 </body>
 </html>
